2014-04-11 John Wu <John dot Wu at ACM dot org>
	* src/array_t.cpp: in function reserve, add call to memset to put
	0 in the newly allocated memory
	* configure.ac: add --with-debug=d to control -DDEBUG option in
	Makefiles (per discussion with Alex Romosan)

2014-04-10 John Wu <John dot Wu at ACM dot org>
	* examples/tiapi.c: add initialization for nmax and msglvl
	* src/index.cpp: regenerate an in-memory bitvector (of all 0s)
	when the index file does not record anything for the bitvector

2014-04-10 Zhongbo Tian <windreamer at gmail dot com>
	* src/bord.cpp: add code to handle string valued column
	(in-memory) without a dictionary
	* src/mensa.cpp: remove call to getValuesArray on string-valued
	columns

2014-04-08 John Wu <John dot Wu at ACM dot org>
	* src/iapi.h, src/iapi.cpp: rename the public functions of IAPI to
	be more consistent, fix a couple of obvious bugs in iapi.cpp

2014-04-07 John Wu <John dot Wu at ACM dot org>
	* runconfig: add entry for edison, determined that intel CC can
	not support std::unique_ptr, have to use GNU CC

2014-03-30 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: reverse the change on 3/24, did not spot that
	fname was deleted once already, the new statement creates a double
	deletion problem

2014-03-24 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp:1259 add statement to delete fname (all existing
	indexing classes allocate space for it through
	ibis::util::strnewdup)

2014-03-19 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp: add timer to ibis::dictionary::write to
	mirror the timer in ibis::dictionary::read

2014-03-17 Sean McNamara <Sean.McNamara at Webtrends dot com>
	* configure.ac: fix problem with AC_MSG_ERROR, add test to try
	c++0x when c++11 is not available

2014-03-13 John Wu <John dot Wu at ACM dot org>
	* src/idirekte.cpp:117 set all bits of bits[popu] to 1s, to avoid
	invoking ibis::column::getNullMask which needs a mutex lock.